fixed z-index of controls on the top right.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,3 +56,7 @@ a {
       display: block;
   }
 }
+
+.cesium-viewer-toolbar {
+  z-index: 2;
+}
